feat: integração completa com módulo comercial externo
- Adicionar suporte a módulos externos com external_url
- Implementar Token Exchange para autenticação segura cross-origin
- Adicionar rota de logout externo para sincronização de sessões
- Atualizar dashboard para suportar redirecionamento automático no logout
- Passar URL da API via query string para integração flexível
- Melhorar detecção de estado de autenticação no dashboard

--- a/public/admin-modules.html
+++ b/public/admin-modules.html
@@ -322,8 +322,9 @@
             
             // Logout
             document.getElementById('logoutBtn').addEventListener('click', async () => {
-                await supabase.auth.signOut();
-                window.location.href = '/login.html';
+                if (confirm('Tem certeza que deseja sair?')) {
+                    await logout(); // Usar função do authManager
+                }
             });
             
             // Module modal
