--- a/public/marketing.html
+++ b/public/marketing.html
@@ -14,6 +14,12 @@
     <!-- Rich Text Editor - Quill.js -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.7/quill.snow.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.7/quill.min.js"></script>
+    <script>
+        // Immediate Auth Check to prevent "development mode" bypass or unauthenticated access
+        if (!localStorage.getItem('access_token')) {
+            window.location.href = '/login.html';
+        }
+    </script>
 </head>
 
 <body class="bg-gray-50 font-inter">
