--- a/public/prostoral.html
+++ b/public/prostoral.html
@@ -1824,6 +1824,31 @@
                     <input type="datetime-local" id="order-expected-delivery"
                         class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-emerald-500 bg-white dark:bg-gray-700 text-gray-900 dark:text-white">
                 </div>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Preço
+                            Final</label>
+                        <div class="relative">
+                            <span class="absolute left-3 top-2 text-gray-500">€</span>
+                            <input type="number" id="order-final-price" step="0.01" min="0" placeholder="0.00"
+                                class="w-full pl-8 pr-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-emerald-500 bg-white dark:bg-gray-700 text-gray-900 dark:text-white">
+                        </div>
+                    </div>
+
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Status</label>
+                        <select id="order-status"
+                            class="w-full px-4 py-2 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-emerald-500 bg-white dark:bg-gray-700 text-gray-900 dark:text-white">
+                            <option value="received">Recebido</option>
+                            <option value="design">Design</option>
+                            <option value="production">Produção</option>
+                            <option value="finishing">Acabamento</option>
+                            <option value="quality_control">Controle de Qualidade</option>
+                            <option value="delivered">Entregue</option>
+                            <option value="cancelled">Cancelado</option>
+                        </select>
+                    </div>
             </form>
 
             <div class="p-6 border-t border-gray-200 dark:border-gray-700 flex justify-end gap-3">
