fix: order modal visibility, cost display, and tab persistence

--- a/public/prostoral.html
+++ b/public/prostoral.html
@@ -1849,6 +1849,7 @@
                             <option value="cancelled">Cancelado</option>
                         </select>
                     </div>
+                </div>
             </form>
 
             <div class="p-6 border-t border-gray-200 dark:border-gray-700 flex justify-end gap-3">
@@ -1903,9 +1904,17 @@
                             <span class="text-gray-500 dark:text-gray-400">Tipo:</span>
                             <span id="detail-work-type" class="font-medium text-gray-900 dark:text-white ml-2">-</span>
                         </div>
-                        <div>
+                        <div class="md:col-span-1">
                             <span class="text-gray-500 dark:text-gray-400">Status:</span>
                             <span id="detail-status" class="ml-2">-</span>
+                        </div>
+                        <div>
+                            <span class="text-gray-500 dark:text-gray-400">Data Entrada:</span>
+                            <span id="detail-created-at" class="font-medium text-gray-900 dark:text-white ml-2">-</span>
+                        </div>
+                        <div>
+                            <span class="text-gray-500 dark:text-gray-400">Data Prevista:</span>
+                            <span id="detail-due-date" class="font-medium text-gray-900 dark:text-white ml-2">-</span>
                         </div>
                         <div class="md:col-span-2">
                             <span class="text-gray-500 dark:text-gray-400">Descrição:</span>
